fixed stacking on narrow screeans (portrait mode)

--- a/_sass/minimal-light.scss
+++ b/_sass/minimal-light.scss
@@ -1,3 +1,23 @@
+
+// Force sidebar and content stacking on mobile
+@media (max-width: 700px) {
+  .wrapper {
+    flex-direction: column !important;
+    width: 100% !important;
+  }
+  header {
+    margin-right: 0 !important;
+    width: 100% !important;
+    float: none !important;
+    position: static !important;
+    flex: none !important;
+  }
+  section {
+    width: 100% !important;
+    min-width: 0 !important;
+    float: none !important;
+  }
+}
 @import url('https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,400;0,500;0,600;1,500;1,600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap');
 
